objects/ssot__Flow__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssociatedRecordId__c</fullName>
        <label>Associated Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssociatedRecordObject__c</fullName>
        <label>Associated Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Flow Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761221460_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flow_AssociatedRecordId_map_Campaign_rel</label>
        <referenceTo>ssot__Campaign__dlm</referenceTo>
        <relationshipLabel>Flow_AssociatedRecordId_map_Campaign_rel</relationshipLabel>
        <relationshipName>rel_1697761221460_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>